--- a/class002/style/style.css
+++ b/class002/style/style.css
@@ -56,3 +56,36 @@ dd {
     padding-left: 15px;
     border-left: 1px solid #444;
 }
+
+article {
+    margin-top: 30px;
+    padding: 20px;
+    background-color: #2a2a2a;
+    border-left: 5px solid #a51c30;
+}
+
+article header h2 {
+    color: #c90016;
+}
+
+article header p {
+    color: #e6e6e6;
+    font-style: italic;
+}
+
+footer {
+    margin-top: 50px;
+    padding: 10px;
+    text-align: center;
+    background-color: #1d1d1d;
+    border-top: 2px solid #a51c30;
+}
+
+footer a {
+    color: #ff8f8f;
+    text-decoration: none;
+}
+
+footer a:hover {
+    color: #c90016;
+}
