--- a/public/classes/class005/style.css
+++ b/public/classes/class005/style.css
@@ -5,6 +5,10 @@
     font-family: Inter;
 }
 
+body{
+    background-color: #9b1c2c;
+}
+
 a {
     text-decoration: none;
     color: #9b1c2c;
@@ -53,4 +57,11 @@ blockquote {
     border-bottom: 2px solid;
     border-top: 2px solid;
     padding: 5px;
+}
+
+img{
+    width: 50%;
+    height: auto;
+    margin: 0px;
+    padding: 0px;
 }
